--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11777,7 +11777,7 @@ users:
       name: AndonPickles
   08239f79-b930-4893-b723-44f38d003500:
     group:
-    - martianmanhunter
+    - flashbarryallen
     options:
       name: Brettconk
     permissions:
@@ -12979,7 +12979,7 @@ users:
       name: ii_Indra
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - criminal
+    - annabethchase
     options:
       name: X_FoodMeatHark_X
       prefix: ''
@@ -13009,7 +13009,7 @@ users:
         permissions: []
   28bc559e-f6bc-41d5-a9a8-4b176b0c6d0a:
     group:
-    - blacklanternsolomongrundy
+    - blacklanternmartianmanhunter
     options:
       name: Mistoffeles01
   28bfb98b-5e9b-4bb8-bd43-a2025c37585f:
@@ -13420,7 +13420,7 @@ users:
       name: HeyPuddin
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group:
-    - blacklanternmartianmanhunter
+    - infinitysilversurfer
     options:
       name: Glint73
     worlds:
@@ -14092,7 +14092,7 @@ users:
       name: Blaziken1234567
   474707f7-f8b4-43ea-8978-9cae17917e82:
     group:
-    - deadshot
+    - firestormraymondstein
     options:
       name: ThatCraftLife
     permissions:
@@ -14755,7 +14755,7 @@ users:
       name: Xylo_Unknown
   59c423bf-2a7e-4fe2-8ac2-7393de01d583:
     group:
-    - deadpool
+    - redhood
     options:
       name: Boss90907
     permissions:
@@ -14772,7 +14772,7 @@ users:
       name: Leanest_Cuisine
   5a157201-96e2-4c9d-ba9e-376a0b61289d:
     group:
-    - martianmanhunter
+    - redhood
     options:
       name: ig89
     worlds:
@@ -14792,7 +14792,7 @@ users:
         permissions: []
   5a56cc7e-4192-41db-b88a-0e7d1c3904bb:
     group:
-    - martianmanhunter
+    - darkseid
     options:
       name: Clayman98
     worlds:
@@ -15215,7 +15215,7 @@ users:
       name: Blaze_pvp
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - martianmanhunter
+    - firestormraymondstein
     options:
       name: NinjagoGamer_MCU
     permissions:
@@ -15959,7 +15959,7 @@ users:
     group:
     - spiderwomangwenstacy
     options:
-      name: Razara_Cheshire
+      name: WildheartRazara
     permissions: []
     worlds:
       greenfield:
@@ -16756,10 +16756,11 @@ users:
         - ch.alias.officekill
   8cb79cd3-1e48-4087-9137-a37e164f1494:
     group:
-    - mortal
+    - officer
     options:
       name: Phantom_Jeff
     permissions:
+    - multiverse.access.policeoffice
     - is.officer
     - ch.alias.onduty
     - multiverse.access.underworld
@@ -16771,7 +16772,7 @@ users:
         permissions: []
   8cb964f5-d345-4a65-8811-cb3b0c11b51b:
     group:
-    - naruto
+    - goku
     options:
       name: Vengeance007
     permissions: []
@@ -16914,7 +16915,7 @@ users:
       name: BlueTroubleGamer
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - ironmanmkxliii
+    - sergeant
     options:
       name: X_Tony_X
     permissions:
@@ -17666,7 +17667,7 @@ users:
       name: grimreaper0202
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - savitar
+    - flashbarryallen
     options:
       name: nightghost2
     permissions:
@@ -18368,7 +18369,7 @@ users:
       name: wolve15
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group:
-    - mortal
+    - sonicthehedgehog
     options:
       name: mintwhip
     permissions:
@@ -19527,7 +19528,7 @@ users:
         permissions: []
   d81c8ea6-8cb6-437a-bb57-15ff1fc27d40:
     group:
-    - flashwalterwest
+    - blackracerwilliewalker
     options:
       name: EpicProGamingTv
     worlds:
@@ -19603,7 +19604,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - harleyquinn
+    - mortal
     options:
       name: TaterBalls
       prefix: ''
@@ -19876,7 +19877,7 @@ users:
       name: KurtNightcrawler
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - blackracerwilliewalker
+    - blackflash
     options:
       name: nevsfam
     permissions: []
@@ -20383,7 +20384,7 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - darthsidious
+    - blacklanternsuperman
     options:
       name: ___Entity_303___
     permissions: []
@@ -21048,7 +21049,7 @@ users:
         permissions: []
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - mortal
+    - xtwothree
     options:
       name: Rairakuu
     permissions:
@@ -21099,7 +21100,7 @@ users:
       name: Gummiefruitrollz
   fc407fff-19fa-4001-a919-4ed757d3fbb3:
     group:
-    - firestormraymondstein
+    - infinitythanos
     options:
       name: De_Archer
     permissions:
@@ -21200,7 +21201,7 @@ users:
         permissions: []
   fe098157-38f7-493c-94bf-243ce095c66d:
     group:
-    - mortal
+    - martianmanhunter
     options:
       name: BassDropGames
     permissions: []
@@ -21488,7 +21489,7 @@ users:
       name: LilChunker
   eb552463-d3b3-4920-ad90-b1d8122fedd6:
     group:
-    - silversurfer
+    - thehumantorch
     options:
       name: StenMander
     worlds:
@@ -21600,7 +21601,7 @@ users:
       name: SchwiftyBlu
   ff0fec80-b8d2-4d10-8951-3061c6e7181d:
     group:
-    - onepunchman
+    - missmartian
     options:
       name: Ultimate_Gamer00
     worlds:
@@ -21729,9 +21730,9 @@ users:
     permissions: []
   0f88eefc-2853-4389-af33-af9132ebbc49:
     group:
-    - agentvenom
+    - mortal
     options:
-      name: Kangjo
+      name: DONT_T0UCH_ME
   ee6c4535-bf06-4edc-83a8-00e0c5a17d24:
     group:
     - athena
@@ -21842,7 +21843,7 @@ users:
       name: KatimariYo
   05696957-018e-4b7b-aced-68dfa88ea074:
     group:
-    - trigon
+    - ichigokurosaki
     options:
       name: Lambsauce_Gaming
     worlds:
@@ -22727,7 +22728,7 @@ users:
     - multiverse.access.policeoffice
   54012046-f9f6-43d7-adc1-080073c88ade:
     group:
-    - mortal
+    - spiderman2099
     options:
       name: turtleknight908
     worlds:
@@ -22893,6 +22894,59 @@ users:
     - thanos
     options:
       name: Beufurd
+  cc7a928c-9113-4c67-8bb8-af0f340a974e:
+    group:
+    - doctormanhattan
+    options:
+      name: ThatMonsterGuy
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
+  af718767-3599-4c36-8b74-1b3d1114ba0c:
+    group:
+    - impossibleman
+    options:
+      name: AustinTheSlime
+  655d4d4b-a171-4a15-aed3-1a3433a6763f:
+    group:
+    - superboykalel
+    options:
+      name: MN_Gaming_
+  8eff01f6-eb51-49bd-bec4-d49dd5e93908:
+    group:
+    - clayface
+    options:
+      name: ender_cow1
+  39b15219-1aba-4098-b312-f841fd3178f8:
+    group:
+    - flashwallywest
+    options:
+      name: redscorpians
+  a8700f86-5177-4231-b5a0-914bc8dcf151:
+    group:
+    - emmafrost
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
+    options:
+      name: SiLLyBiLLyHD
+  39126046-3d98-4c0a-9e12-d8ad521ce37f:
+    group:
+    - harrypotter
+    options:
+      name: brandonhoang555
+  440815ee-77b2-4f4c-8c35-f0df4acca7d7:
+    group:
+    - scarletspiderbenreilly
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: ArtemusGoddess
 worlds:
   checkers:
     inheritance:
