--- a/WorldGuard/worlds/overvoid/regions.yml
+++ b/WorldGuard/worlds/overvoid/regions.yml
@@ -13,7 +13,7 @@ regions:
     arenacenter:
         parent: arenajail
         min: {x: -165.0, y: 92.0, z: 28.0}
-        max: {x: -137.0, y: 113.0, z: 56.0}
+        max: {x: -137.0, y: 97.0, z: 56.0}
         members: {}
         flags: {game-mode: SURVIVAL, greeting: Welcome to Jail, greeting-group: NON_MEMBERS,
             game-mode-group: NON_MEMBERS}
@@ -32,7 +32,7 @@ regions:
         min: {x: -41.0, y: 96.0, z: 28.0}
         max: {x: -35.0, y: 99.0, z: 34.0}
         members: {}
-        flags: {use: allow, invincible: deny, feed-delay: 0, feed-amount: 0, pvp: deny}
+        flags: {invincible: deny, use: allow, feed-amount: 0, feed-delay: 0, pvp: deny}
         owners: {}
         type: cuboid
         priority: 0
