--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1,7 +1,7 @@
 v2-logout:
   474707f7-f8b4-43ea-8978-9cae17917e82:
-    group: default
-    world: greenfield
+    group: office
+    world: office
   7d8daa50-d197-41eb-9681-f20b863f9d8a:
     group: default
     world: survival
@@ -12,8 +12,8 @@ v2-logout:
     world: survival_nether
     group: default
   deb20342-389e-4b5f-808f-24bd22d88aa4:
-    world: policeoffice
-    group: policeoffice
+    world: survival
+    group: default
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group: spawn
     world: spawn
@@ -30,11 +30,11 @@ v2-logout:
     group: default
     world: survival
   d741dd01-8fac-496e-adc6-f88e1087e57c:
-    group: default
-    world: greenfield
+    group: policeoffice
+    world: policeoffice
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: spawn
-    world: spawn
+    group: office
+    world: office
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: greenfield
     group: default
@@ -48,14 +48,14 @@ v2-logout:
     group: default
     world: survival
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: greenfield
-    group: default
+    world: spawn
+    group: spawn
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    group: default
-    world: greenfield
+    group: policeoffice
+    world: policeoffice
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: fightclub
     world: fightclub
@@ -66,8 +66,8 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: flappybirdparkour
-    group: flappybirdparkour
+    world: greenfield
+    group: default
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
     world: crossfire
@@ -75,20 +75,20 @@ v2-logout:
     group: default
     world: greenfield
   79bde3af-7aae-489c-a44d-ceba16cc7b02:
-    group: default
-    world: greenfield
+    group: escaperoom
+    world: escaperoom
   120b63c4-f322-44a8-a7b0-e15bf7d9f879:
     group: default
     world: greenfield
   8cb79cd3-1e48-4087-9137-a37e164f1494:
-    group: default
-    world: greenfield
+    group: overvoid
+    world: overvoid
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: policeoffice
-    group: policeoffice
+    world: overvoid
+    group: overvoid
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: policeoffice
     group: policeoffice
@@ -135,7 +135,7 @@ v2-logout:
     world: speedforce
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group: default
-    world: greenfield
+    world: survival
   e0fc9cdc-59e8-4f9d-bc86-20648906953e:
     group: default
     world: greenfield
@@ -170,7 +170,7 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: greenfield
+    world: survival
     group: default
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: default
@@ -194,14 +194,14 @@ v2-logout:
     group: default
     world: greenfield
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
-    group: default
-    world: greenfield
+    group: office
+    world: office
   78af88f4-cd13-4950-a737-7d36b15ead56:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: greenfield
-    group: default
+    world: escaperoom
+    group: escaperoom
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -294,7 +294,7 @@ v2-logout:
     world: lavahop
   28bc559e-f6bc-41d5-a9a8-4b176b0c6d0a:
     group: default
-    world: survival
+    world: greenfield
   eb0c7b09-20a0-4a7e-9327-c99e26d11991:
     group: default
     world: survival
@@ -482,8 +482,8 @@ v2-logout:
     group: default
     world: greenfield
   1c575be8-a874-4b78-8307-3252351ad276:
-    group: default
-    world: greenfield
+    group: overvoid
+    world: overvoid
   0e42e474-1348-4fa8-97c6-cb39a9c0988f:
     group: default
     world: greenfield
@@ -623,8 +623,8 @@ v2-logout:
     world: checkers
     group: checkers
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
-    group: default
-    world: survival
+    group: spawn
+    world: spawn
   f1a35d55-39db-4012-a70d-e677f6e91dc3:
     group: default
     world: greenfield
@@ -1475,7 +1475,7 @@ v2-logout:
     world: greenfield
   eb552463-d3b3-4920-ad90-b1d8122fedd6:
     group: default
-    world: gotham
+    world: infinitycity
   d36483df-3c44-45b8-90f0-d6ca075333da:
     group: default
     world: greenfield
@@ -1505,7 +1505,7 @@ v2-logout:
     world: greenfield
   5a56cc7e-4192-41db-b88a-0e7d1c3904bb:
     group: default
-    world: survival
+    world: greenfield
   1a20a7fd-2f13-4862-bd2d-ac9e6379374a:
     group: default
     world: greenfield
@@ -1889,7 +1889,7 @@ v2-logout:
     world: greenfield
   f4b1d7aa-5980-497b-84c3-11fb45b48bf5:
     group: default
-    world: survival
+    world: greenfield
   6628b356-9bd9-4727-86b8-5e3f6020d391:
     group: default
     world: greenfield
@@ -2057,7 +2057,7 @@ v2-logout:
     world: anarchy
   5a157201-96e2-4c9d-ba9e-376a0b61289d:
     group: default
-    world: greenfield
+    world: survival
   ceac0096-7053-4e94-a7ba-86e98d3dcae5:
     group: default
     world: greenfield
@@ -2261,7 +2261,7 @@ v2-logout:
     world: greenfield
   c5d1f6d3-f22a-49be-9f83-4b9b1f42e61f:
     group: default
-    world: greenfield
+    world: survival_nether
   2e177dae-4191-459b-bc49-f5d5d5ad4e95:
     group: default
     world: greenfield
@@ -2309,7 +2309,7 @@ v2-logout:
     world: greenfield
   f41b71e1-4d5c-467c-8a64-cf9faf8ad33c:
     group: default
-    world: greenfield
+    world: survival
   7cc821b3-b7fb-4d23-8db6-267059f11cc5:
     group: default
     world: greenfield
@@ -2327,10 +2327,10 @@ v2-logout:
     world: greenfield
   97360984-05cf-4e3e-856e-b0bf0153348c:
     group: default
-    world: greenfield
+    world: survival
   54012046-f9f6-43d7-adc1-080073c88ade:
-    group: plots
-    world: plots
+    group: spawn
+    world: spawn
   2759e574-85bf-4b91-a079-15d316e419af:
     group: default
     world: greenfield
@@ -2379,14 +2379,14 @@ v2-logout:
     group: default
     world: survival
   08239f79-b930-4893-b723-44f38d003500:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   e9a01180-a9e4-4da0-8d2e-990285e0af23:
     group: default
     world: greenfield
   40f1bd93-0e56-4d6b-b13e-9e02f64af657:
     group: default
-    world: greenfield
+    world: survival
   93634ab8-042b-4a08-aacf-940e8ef139de:
     group: default
     world: greenfield
@@ -2438,3 +2438,42 @@ v2-logout:
   c4d0d018-9898-424a-9ec0-d9bd4a99ad6d:
     group: default
     world: greenfield
+  61ecbbbe-8b18-4ba2-895e-a06086ca778d:
+    group: default
+    world: greenfield
+  cc7a928c-9113-4c67-8bb8-af0f340a974e:
+    group: default
+    world: survival
+  af718767-3599-4c36-8b74-1b3d1114ba0c:
+    group: default
+    world: survival
+  8eff01f6-eb51-49bd-bec4-d49dd5e93908:
+    group: default
+    world: survival
+  655d4d4b-a171-4a15-aed3-1a3433a6763f:
+    group: default
+    world: greenfield
+  7ec89220-010d-4e53-a697-9ad02eb620c9:
+    group: default
+    world: survival
+  db06d89f-a7d0-4fc0-b10b-5891d4e0095a:
+    group: default
+    world: greenfield
+  39b15219-1aba-4098-b312-f841fd3178f8:
+    group: default
+    world: survival
+  a8700f86-5177-4231-b5a0-914bc8dcf151:
+    group: default
+    world: survival
+  440815ee-77b2-4f4c-8c35-f0df4acca7d7:
+    group: colosseum
+    world: colosseum
+  1c25f331-7091-4620-ac31-9d9945a9f226:
+    group: default
+    world: greenfield
+  39126046-3d98-4c0a-9e12-d8ad521ce37f:
+    group: spawn
+    world: spawn
+  8662742f-a6b6-471a-8cd9-7798978fd7d7:
+    group: formuladrift
+    world: formuladrift
