--- a/MythicMobs/Mobs/ExampleMobs.yml
+++ b/MythicMobs/Mobs/ExampleMobs.yml
@@ -95,7 +95,7 @@ JailSkele:
     ThreatTable: true
   Skills:
   - skill{s=HealAndNext} @Target ~onAttack
-  - potion{type=HEAL;duration=10;level=10} @self ~onAttack
+  - potion{type=POISON;duration=10;level=10} @self ~onAttack
 SuperWither:
   Type: WITHER
   Display: '&2Super Wither'
