--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12229,7 +12229,7 @@ users:
       name: DerpIndustries
   14fc4561-32ff-4d90-86ca-9a8074dddba8:
     group:
-    - blackflash
+    - atom
     options:
       name: Slippy_penguin
   15356de5-5e27-4d1e-9562-5a0b42edf66d:
@@ -12491,9 +12491,14 @@ users:
       name: Joebux
   1c42d531-df4e-4b6a-b895-0641cd5dd4d4:
     group:
-    - flashbarryallen
+    - dannyphantom
     options:
       name: EnglishCat
+    worlds:
+      greenfield:
+        permissions: []
+    permissions:
+    - multiverse.access.policeoffice
   1c48100a-d457-46a1-8d44-9c38346c7beb:
     group:
     - zeus
@@ -13114,7 +13119,7 @@ users:
       name: TALENTEDLIME555
   2c2de5e0-bf4e-4def-a7bb-507648fb9d66:
     group:
-    - ironfist
+    - superman
     options:
       name: VipeGamingYT
     permissions:
@@ -18025,7 +18030,7 @@ users:
       name: FlamesGalore
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - ironspider
+    - deadpool
     options:
       name: Bcrulez
     permissions: []
@@ -18548,7 +18553,7 @@ users:
       name: Slendergirl207
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - blacklanterndeathstormraymondrusch
+    - whitelanternkylerayner
     options:
       name: v_frankenstein
     permissions:
@@ -18568,7 +18573,7 @@ users:
       name: 22mistymint
   bf559559-e3c6-4445-bc99-2f2d8a137688:
     group:
-    - doctorstrange
+    - superboykalel
     options:
       name: Enderray1_
     worlds:
@@ -19604,7 +19609,7 @@ users:
       name: TBNRattata
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     group:
-    - mortal
+    - missmartian
     options:
       name: TaterBalls
       prefix: ''
@@ -20103,7 +20108,7 @@ users:
         permissions: []
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group:
-    - sergeant
+    - doctormanhattan
     options:
       name: WhatAreThose05
     permissions:
@@ -20384,10 +20389,11 @@ users:
       name: footballkilla84
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
     group:
-    - blacklanternsuperman
+    - fang
     options:
       name: ___Entity_303___
-    permissions: []
+    permissions:
+    - change.chat
     worlds:
       greenfield:
         permissions: []
@@ -20771,10 +20777,11 @@ users:
       name: Jakestar1203
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - mortal
+    - officer
     options:
       name: mythguy1226
     permissions:
+    - multiverse.access.policeoffice
     - is.officer
     - ch.alias.onduty
     - is.married
@@ -21049,7 +21056,7 @@ users:
         permissions: []
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - xtwothree
+    - martianmanhunter
     options:
       name: Rairakuu
     permissions:
@@ -21100,7 +21107,7 @@ users:
       name: Gummiefruitrollz
   fc407fff-19fa-4001-a919-4ed757d3fbb3:
     group:
-    - infinitythanos
+    - rocketraccoon
     options:
       name: De_Archer
     permissions:
@@ -21356,6 +21363,7 @@ users:
       fightclub:
         permissions: []
     permissions:
+    - multiverse.access.policeoffice
     - is.officer
     - ch.alias.onduty
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
@@ -22941,12 +22949,29 @@ users:
       name: brandonhoang555
   440815ee-77b2-4f4c-8c35-f0df4acca7d7:
     group:
-    - scarletspiderbenreilly
+    - killerfrostcaitlinsnow
     worlds:
       greenfield:
         permissions: []
     options:
       name: ArtemusGoddess
+  1ded7836-99d3-4d99-b641-759c37e2e278:
+    group:
+    - dumbledore
+    options:
+      name: Sparkawan
+  ff45a5e3-416a-4808-b777-9b48c056cbe6:
+    group:
+    - athena
+    options:
+      name: FlowerGurle
+  d7969b04-6f04-456d-9e20-cb6c5a3f52d6:
+    group:
+    - criminal
+    permissions:
+    - chat.cooldown
+    options:
+      name: autokai144844
 worlds:
   checkers:
     inheritance:
