--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -33,8 +33,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: office
-    world: office
+    group: policeoffice
+    world: policeoffice
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: greenfield
     group: default
@@ -48,8 +48,8 @@ v2-logout:
     group: default
     world: survival
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: spawn
-    group: spawn
+    world: greenfield
+    group: default
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
@@ -90,8 +90,8 @@ v2-logout:
     world: overvoid
     group: overvoid
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
-    world: policeoffice
-    group: policeoffice
+    world: overvoid
+    group: overvoid
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     world: spawn
     group: spawn
@@ -135,7 +135,7 @@ v2-logout:
     world: speedforce
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group: default
-    world: survival
+    world: greenfield
   e0fc9cdc-59e8-4f9d-bc86-20648906953e:
     group: default
     world: greenfield
@@ -174,7 +174,7 @@ v2-logout:
     group: default
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: default
-    world: survival_nether
+    world: survival
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
     group: spleeflobby
     world: spleeflobby
@@ -369,7 +369,7 @@ v2-logout:
     world: greenfield
   fc407fff-19fa-4001-a919-4ed757d3fbb3:
     group: default
-    world: greenfield
+    world: survival_nether
   be4d9e29-2dd5-4ea1-8d74-5d47dc45ff73:
     group: fightclub
     world: fightclub
@@ -470,8 +470,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: survival
   9e706bf6-6fc2-4a2a-bdda-4ef531d05908:
     group: default
     world: greenfield
@@ -491,8 +491,8 @@ v2-logout:
     group: default
     world: greenfield
   bf559559-e3c6-4445-bc99-2f2d8a137688:
-    group: spleeflobby
-    world: spleeflobby
+    group: default
+    world: gotham
   a0131c23-467c-4f5a-9507-c5b49de7dd52:
     group: default
     world: greenfield
@@ -620,8 +620,8 @@ v2-logout:
     group: default
     world: survival
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
-    world: checkers
-    group: checkers
+    world: survival
+    group: default
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: spawn
     world: spawn
@@ -1378,8 +1378,8 @@ v2-logout:
     group: default
     world: survival
   5da26092-c807-4c9b-8d08-9523f74ddc97:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   965ab7af-16e7-4dd0-b16c-f26d4300d23f:
     group: default
     world: greenfield
@@ -2466,8 +2466,8 @@ v2-logout:
     group: default
     world: survival
   440815ee-77b2-4f4c-8c35-f0df4acca7d7:
-    group: colosseum
-    world: colosseum
+    group: default
+    world: greenfield
   1c25f331-7091-4620-ac31-9d9945a9f226:
     group: default
     world: greenfield
@@ -2477,3 +2477,18 @@ v2-logout:
   8662742f-a6b6-471a-8cd9-7798978fd7d7:
     group: formuladrift
     world: formuladrift
+  1c42d531-df4e-4b6a-b895-0641cd5dd4d4:
+    group: policeoffice
+    world: policeoffice
+  14fc4561-32ff-4d90-86ca-9a8074dddba8:
+    group: default
+    world: greenfield
+  1ded7836-99d3-4d99-b641-759c37e2e278:
+    group: default
+    world: greenfield
+  ff45a5e3-416a-4808-b777-9b48c056cbe6:
+    group: default
+    world: greenfield
+  d7969b04-6f04-456d-9e20-cb6c5a3f52d6:
+    group: overvoid
+    world: overvoid
