--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,3 @@
-
 groups:
   3dmanchuckandhal:
     inheritance:
@@ -8714,7 +8713,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&4R&0e&4v&0e&4r&0s&4e &0F&4l&0a&4s&0h&0(&4D&0W&0)'
+      prefix: '&eRe&4v&eerse Fl&4a&esh&8(&eE&4T&8)'
       suffix: '&e'
     permissions: []
     worlds:
