--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8713,7 +8713,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&eRe&4v&eerse Fl&4a&esh&8(&eE&4T&8)'
+      prefix: '&eRe&4v&eerse-Fl&4a&esh&8(&eE&4T&8)'
       suffix: '&e'
     permissions: []
     worlds:
