--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8808,6 +8808,7 @@ groups:
         - ch.alias.haste3
         - ch.alias.haste4
         - ch.alias.lightning
+        - ch.alias.ma
   rmika:
     inheritance:
     - commonherotraits
